[package]
name = "layout_id"
version = "0.2.3"
authors = ["Jonathan Nilsson <l.a.jonathan.nilsson@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/JoNil/layout_id"
documentation = "https://jonil.github.io/layout_id/layout_id/index.html"
description = "Layout id is used to generate a unique id for a type that changes if it's memory layout changes"
readme = "README.md"

exclude = [
  ".gitignore",
  ".travis.yml",
]

[features]
use_clippy = ["clippy"]

[dependencies]
regex = "0.1"
twox-hash = "0.1"

[dependencies.clippy]
version = "*"
optional = true